<resources>
    <string name="app_name">Ursviks Inventory</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=20] -->
    <string name="empty_view_title_text">There is nothing to sell...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=20] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Text on the button to add a product [CHAR LIMIT=5] -->
    <string name="button_text_add_inventory">ADD</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=20] -->
    <string name="category_overview">Overview</string>

    <!-- Label for price information in the editor [CHAR LIMIT=20] -->
    <string name="category_price">Price</string>

    <!-- Label for supplier email information in the editor [CHAR LIMIT=20] -->
    <string name="category_supplier_email">Supplier Email</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=20] -->
    <string name="category_quantity">Current Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=20] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=20] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for supplier email field in the editor [CHAR LIMIT=20] -->
    <string name="hint_product_supplier_email">Email Address</string>

    <!-- Units for price of the product (kr) [CHAR LIMIT=5] -->
    <string name="unit_price">kr</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=20] -->
    <string name="hint_product_quantity">Current Quantity</string>

    <!-- Text on the button for order in quantity field in the editor [CHAR LIMIT=10] -->
    <string name="quantity_order_button">Order</string>

    <!-- Text hint for sale quantity field in the editor [CHAR LIMIT=20] -->
    <string name="hint_sale_product_quantity">Sale Quantity</string>

    <!-- Text on the button for sale in quantity field in the editor [CHAR LIMIT=10] -->
    <string name="quantity_sale_button">-</string>

    <!-- Text hint for receive quantity field in the editor [CHAR LIMIT=20] -->
    <string name="hint_receive_product_quantity">Receive Quantity</string>

    <!-- Text on the button for receive in quantity field in the editor [CHAR LIMIT=10] -->
    <string name="quantity_receive_button">+</string>

    <!-- Text on the button for upload new picture in overview field in the editor [CHAR LIMIT=10] -->
    <string name="add_new_picture_button">New Photo</string>

    <!-- Label for overflow menu option that inserts fake inventory data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_products">Delete All Products</string>

    <!-- Text on the button for sale in list item [CHAR LIMIT=5] -->
    <string name="list_item_sale_button">Sale</string>

    <!-- Text for quantity title in list item [CHAR LIMIT=10] -->
    <string name="list_item_quantity_title">Quantity:</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog message to ask the user to confirm deleting all products [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title for the app bar of EditorActivity when adding a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_add_product">Add a Product</string>

    <!-- Title for the app bar of EditorActivity when editing a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message for saving error when inserting a product [CHAR LIMIT=20] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message for saving success when inserting a product [CHAR LIMIT=20] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message for updating error when updating a product [CHAR LIMIT=20] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message for updating success when updating a product [CHAR LIMIT=20] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=20] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message when user try to click sale Button when item quantity is smaller than 0 [CHAR LIMIT=NONE] -->
    <string name="sale_button_no_item">Product not enough!</string>

    <!-- Toast message when user try to save a product information without a product name [CHAR LIMIT=NONE] -->
    <string name="name_cannot_be_empty">Name cannot be empty!</string>

    <!-- Toast message when user try to save a product information without a product price [CHAR LIMIT=NONE] -->
    <string name="price_cannot_be_empty">Price cannot be empty!</string>

    <!-- Toast message when user try to save a product information without a product current quantity [CHAR LIMIT=NONE] -->
    <string name="current_quantity_cannot_be_empty">Current Quantity cannot be empty!</string>

    <!-- Toast message when user try to minus a product quantity without providing sale quantity [CHAR LIMIT=NONE] -->
    <string name="sale_quantity_cannot_be_empty">How many did you sale?</string>

    <!-- Toast message when user try to plus a product quantity without providing receive quantity [CHAR LIMIT=NONE] -->
    <string name="receive_quantity_cannot_be_empty">How many did you receive?</string>

    <!-- Toast message when user try to minus a product quantity with a negative number [CHAR LIMIT=NONE] -->
    <string name="invalid_sale_quantity">Invalid sale quantity!</string>

    <!-- Toast message when user try to plus a product quantity with a negative number [CHAR LIMIT=NONE] -->
    <string name="invalid_receive_quantity">Invalid receive quantity!</string>

    <!-- Dialog title when asking user to choose new picture from gallery or camera or cancel [CHAR LIMIT=20] -->
    <string name="dialog_add_photo_title">Add Photo!</string>

    <!-- Dialog option one "Take Photo" when asking user to choose new picture from gallery or camera or cancel [CHAR LIMIT=20] -->
    <string name="dialog_add_photo_take_photo">Take Photo</string>

    <!-- Dialog option two "Choose from Library" when asking user to choose new picture from gallery or camera or cancel [CHAR LIMIT=20] -->
    <string name="dialog_add_photo_choose_from_library">Choose from Library</string>

    <!-- Dialog option three "Cancel" when asking user to choose new picture from gallery or camera or cancel [CHAR LIMIT=20] -->
    <string name="dialog_add_photo_cancel">Cancel</string>

    <!-- email subject when clicking order more button to send an email to supplier [CHAR LIMIT=20] -->
    <string name="email_subject">Order for</string>

    <!-- Dialog Title when checking found there is no permission to access camera or gallery [CHAR LIMIT=20] -->
    <string name="permission_necessary">Permission Necessary!</string>

    <!-- Dialog Message when checking found there is no permission to access camera [CHAR LIMIT=20] -->
    <string name="camera_permission_necessary">Camera permission is necessary</string>

    <!-- Dialog Message when checking found there is no permission to access gallery [CHAR LIMIT=20] -->
    <string name="library_permission_necessary">External storage permission is necessary</string>

    <!-- Toast message when user denied camera access. [CHAR LIMIT=20] -->
    <string name="request_camera_denied">Request Camera Denied.</string>

    <!-- Toast message when user denied library access. [CHAR LIMIT=20] -->
    <string name="select_photo_from_library_denied">Select Photo from library Denied.</string>

</resources>
