<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/category_overview"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Picture field -->
            <ImageView
                android:id="@+id/editor_product_image"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/empty_box"/>

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/category_price"/>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_price"
                android:inputType="number"/>

            <!-- Units for price (kr) -->
            <TextView
                android:id="@+id/label_price_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/edit_product_price"
                android:layout_centerVertical="true"
                android:text="@string/unit_price"
                android:textAppearance="?android:textAppearanceSmall"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>